[gd_scene load_steps=13 format=3 uid="uid://bp5vg2p5rtto4"]

[ext_resource type="Script" uid="uid://c5kfdyrb571t5" path="res://main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://d2suaja8e1er1" path="res://assets/grass.png" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://gusp3vectrfp" path="res://coin.tscn" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://dh8gsuqbbqiu8" path="res://powerup.tscn" id="3_4c57u"]
[ext_resource type="PackedScene" uid="uid://bnd5k58e230ep" path="res://player.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://c1vd502vhu1ya" path="res://cactus.tscn" id="4_efxa6"]
[ext_resource type="PackedScene" uid="uid://b7acq2erk2ctp" path="res://hud.tscn" id="5_lquwl"]
[ext_resource type="AudioStream" uid="uid://ch45po8dcxvt3" path="res://assets/audio/Coin.wav" id="6_5vw27"]
[ext_resource type="AudioStream" uid="uid://yoc618ygrjk2" path="res://assets/audio/Level.wav" id="7_kek77"]
[ext_resource type="AudioStream" uid="uid://dt3q2kj1ss5xe" path="res://assets/audio/EndSound.wav" id="8_4c57u"]
[ext_resource type="AudioStream" uid="uid://gpr5lhta2gy1" path="res://assets/audio/Powerup.wav" id="9_kek77"]
[ext_resource type="PackedScene" uid="uid://dwnea1adqjk2i" path="res://touch_controls.tscn" id="12_dg77c"]

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
coin_scene = ExtResource("2_lquwl")
powerup_scene = ExtResource("3_4c57u")
cactus_scene = ExtResource("4_efxa6")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1bvp3")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("3_lquwl")]

[node name="GameTimer" type="Timer" parent="."]

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" parent="." instance=ExtResource("5_lquwl")]

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5vw27")

[node name="LevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kek77")

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_4c57u")

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_kek77")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TouchControls" parent="Control" instance=ExtResource("12_dg77c")]

[connection signal="hurt" from="Player" to="." method="_on_player_hurt"]
[connection signal="pickup" from="Player" to="." method="_on_player_pickup"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_powerup_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
